product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/overview/index.mdx
---
title: EDB Postgres AI Hybrid Manager
navTitle: Overview
indexCards: simple
directoryDefaults:
iconName: Earth
description: An overview of the Hybrid Manager
navigation:
- architecture
- supported postgres_distributions
- supported database types
---


**EDB Postgres AI Hybrid Manager (HM)** is the control plane for Postgres, sovereign AI, and analytics workloads across Kubernetes-based infrastructures. It provides a consistent and unified way to provision, operate, and monitor PostgreSQL clusters&mdash;whether you're deploying on-prem, in the cloud, or across hybrid environments.

Hybrid Manager enables end-to-end data workflows from database deployment to AI analytics, all governed within your infrastructure.

## Why Hybrid Manager?

Modern data platforms require more than just database provisioning&mdash;they need to support:

- Kubernetes-native scalability and orchestration
- Resilient, high-availability deployments
- AI and GenAI integration
- Postgres-native analytics with open formats
- Governance, observability, and access control

Hybrid Manager was created to meet these demands. It extends Kubernetes capabilities with built-in Postgres expertise, making it easier to operate stateful workloads without sacrificing the flexibility of containerized infrastructure.

## Key capabilities

| Area                               | Description                                                                                                                                                                                                                                                                         |
|------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| **Database provisioning**          | Deploy highly available PostgreSQL or Distributed Postgres clusters using the console, templates, or declarative manifests.                                                                                                                                                         |
| **AI integration**                 | Run [sovereign GenAI pipelines](../../ai-factory/), serve models with KServe, and build AI knowledge bases governed by your infrastructure.                                                                                                                                         |
| **Analytics**                      | Offload cold data to [Delta Lake or Iceberg](/pgaa/latest/), query with Postgres syntax, and enable hybrid transactional/analytical processing.                                                                                                                                  |
| **Monitoring and observability**   | Use the integrated dashboards that leverage Prometheus, Grafana, and Loki to obtain deep visibility into query health, resource usage, and system alerts.                                                                                                                           |
| **Security and access management** | Integrate with identity providers, define RBAC for projects and clusters, and manage secure access to your databases and services.                                                                                                                                                  |
| **Database migration**             | Migrate schemas and data from external databases (Oracle, self-managed Postgres) to HM-managed clusters. Leverage integrated services for migration and schema assessment, data transfer (snapshot), and continuous replication (streaming) to achieve minimal downtime migrations. |

## Supported environments

Hybrid Manager runs on Kubernetes and supports these common enterprise platforms:

- Amazon EKS
- Google GKE
- Red Hat OpenShift (RHOS)

It supports both cloud-native and on-premises architectures, allowing you to build sovereign, compliant, and flexible data infrastructures.

## Integrated solutions

Hybrid Manager unlocks core functionality across the EDB Postgres AI ecosystem. It consists of:

- [AI Factory](../../ai-factory/) – Build and run GenAI workloads using private data.
- [Analytics](/pgaa/latest/) – Enable open-format analytics with Iceberg, Delta Lake, and tiered offloading.
- [Migration](../using_hybrid_manager/migration/) – Accelerate adoption of Postgres with in-platform migration tools.
- [Monitoring](../using_hybrid_manager/monitoring/) – Monitor operations using built-in observability stack with Kubernetes and database insights.
- [Cluster lifecycle](../using_hybrid_manager/cluster_management/) – Create templates, perform upgrades, configure HA settings, and restore data.

## Learn more

- [Architecture overview](./architecture)
- [Supported Postgres distributions](./postgres_distributions)
- [Supported database types](./database_types)

## Get started

- [Install Hybrid Manager](../install/)
- [Use Hybrid Manager](../using_hybrid_manager/)
